{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 8868,
  "lineage": "8648ab48-d7ea-8f0c-2043-e3040e75baee",
  "resources": [
    {
      "mode": "data",
      "type": "aws_network_interface",
      "name": "fgt1eth1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125564317:network-interface/eni-01c3c4c45da3c30f0",
            "attachment": [
              {
                "attachment_id": "eni-attach-0ffdb4760de385349",
                "device_index": 1,
                "instance_id": "i-012a5546a370091af",
                "instance_owner_id": "211125564317"
              }
            ],
            "availability_zone": "us-east-1a",
            "description": "fgtvm-port2",
            "id": "eni-01c3c4c45da3c30f0",
            "interface_type": "interface",
            "mac_address": "0a:ff:e0:10:bd:09",
            "owner_id": "211125564317",
            "private_dns_name": "ip-10-1-0-91.ec2.internal",
            "private_ip": "10.1.0.91",
            "private_ips": [
              "10.1.0.91"
            ],
            "requester_id": "AIDATCKAQOOO5J46URIQG",
            "security_groups": [
              "sg-078c16be698cfb03f",
              "sg-0c21ac42c032fe76e"
            ],
            "subnet_id": "subnet-060201d0d3e8537ab",
            "vpc_id": "vpc-0f922d696b1b8d18a"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_network_interface",
      "name": "fgt2eth1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125564317:network-interface/eni-049c24fdffb08b847",
            "attachment": [
              {
                "attachment_id": "eni-attach-04de65b2343c0081f",
                "device_index": 1,
                "instance_id": "i-072049bec1ade5d66",
                "instance_owner_id": "211125564317"
              }
            ],
            "availability_zone": "us-east-1b",
            "description": "fgtvm2-port2",
            "id": "eni-049c24fdffb08b847",
            "interface_type": "interface",
            "mac_address": "0e:51:f3:37:dc:8d",
            "owner_id": "211125564317",
            "private_dns_name": "ip-10-1-1-107.ec2.internal",
            "private_ip": "10.1.1.107",
            "private_ips": [
              "10.1.1.107"
            ],
            "requester_id": "AIDATCKAQOOO5J46URIQG",
            "security_groups": [
              "sg-078c16be698cfb03f",
              "sg-0c21ac42c032fe76e"
            ],
            "subnet_id": "subnet-05c6459e684ca46fe",
            "vpc_id": "vpc-0f922d696b1b8d18a"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_network_interface",
      "name": "vpcendpointip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125564317:network-interface/eni-0976bcfa6aa13c4f1",
            "attachment": [
              {
                "attachment_id": "ela-attach-027e969b85814f983",
                "device_index": 1,
                "instance_owner_id": "amazon-aws"
              }
            ],
            "availability_zone": "us-east-1a",
            "description": "ELB gwy/gwlb-Inspection-VPC/4f22771f150eec84",
            "filter": [
              {
                "name": "availability-zone",
                "values": [
                  "us-east-1a"
                ]
              },
              {
                "name": "description",
                "values": [
                  "*ELB*"
                ]
              },
              {
                "name": "status",
                "values": [
                  "in-use"
                ]
              },
              {
                "name": "vpc-id",
                "values": [
                  "vpc-0f922d696b1b8d18a"
                ]
              }
            ],
            "id": "eni-0976bcfa6aa13c4f1",
            "interface_type": "gateway_load_balancer",
            "mac_address": "0a:ff:c2:1b:54:af",
            "owner_id": "211125564317",
            "private_dns_name": "ip-10-1-0-44.ec2.internal",
            "private_ip": "10.1.0.44",
            "private_ips": [
              "10.1.0.44"
            ],
            "requester_id": "005270062302",
            "subnet_id": "subnet-060201d0d3e8537ab",
            "vpc_id": "vpc-0f922d696b1b8d18a"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_network_interface",
      "name": "vpcendpointipaz2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125564317:network-interface/eni-08293fd3d36e6a692",
            "attachment": [
              {
                "attachment_id": "ela-attach-0ff31365a22eb7ee4",
                "device_index": 1,
                "instance_owner_id": "amazon-aws"
              }
            ],
            "availability_zone": "us-east-1b",
            "description": "ELB gwy/gwlb-Inspection-VPC/4f22771f150eec84",
            "filter": [
              {
                "name": "availability-zone",
                "values": [
                  "us-east-1b"
                ]
              },
              {
                "name": "description",
                "values": [
                  "*ELB*"
                ]
              },
              {
                "name": "status",
                "values": [
                  "in-use"
                ]
              },
              {
                "name": "vpc-id",
                "values": [
                  "vpc-0f922d696b1b8d18a"
                ]
              }
            ],
            "id": "eni-08293fd3d36e6a692",
            "interface_type": "gateway_load_balancer",
            "mac_address": "0e:7e:17:79:f7:47",
            "owner_id": "211125564317",
            "private_dns_name": "ip-10-1-1-134.ec2.internal",
            "private_ip": "10.1.1.134",
            "private_ips": [
              "10.1.1.134"
            ],
            "requester_id": "273749504915",
            "subnet_id": "subnet-05c6459e684ca46fe",
            "vpc_id": "vpc-0f922d696b1b8d18a"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "osi-tgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:us-east-1:211125564317:transit-gateway/tgw-00314cdf2d3bcc3d0",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "disable",
            "default_route_table_propagation": "disable",
            "description": "Transit Gateway",
            "dns_support": "enable",
            "id": "tgw-00314cdf2d3bcc3d0",
            "multicast_support": "disable",
            "owner_id": "211125564317",
            "tags": {
              "Name": "Inspection-TGW"
            },
            "tags_all": {
              "Name": "Inspection-TGW"
            },
            "vpn_ecmp_support": "enable"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "CustomerPrivate-VPC-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "20.1.0.0/16",
            "id": "tgw-rtb-0ac1075b2d9e739f9_20.1.0.0/16",
            "transit_gateway_attachment_id": "tgw-attach-06e66b10462b13b2f",
            "transit_gateway_route_table_id": "tgw-rtb-0ac1075b2d9e739f9"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.osi-tgw",
            "aws_ec2_transit_gateway_route_table.tgw-inspection-rt",
            "aws_ec2_transit_gateway_vpc_attachment.tgw-att-vpc-vpc1",
            "aws_subnet.csprivatesubnetaz1",
            "aws_subnet.csprivatesubnetaz2",
            "aws_vpc.customer-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "CustomerPublic-VPC-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "20.2.0.0/16",
            "id": "tgw-rtb-0ac1075b2d9e739f9_20.2.0.0/16",
            "transit_gateway_attachment_id": "tgw-attach-0ffb7f72010e367f3",
            "transit_gateway_route_table_id": "tgw-rtb-0ac1075b2d9e739f9"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.osi-tgw",
            "aws_ec2_transit_gateway_route_table.tgw-inspection-rt",
            "aws_ec2_transit_gateway_vpc_attachment.tgw-att-vpc-vpc2",
            "aws_subnet.pv-privatesubnetaz1",
            "aws_subnet.pv-privatesubnetaz2",
            "aws_vpc.public-customer-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "Inspection-VPC-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "10.1.0.0/22",
            "id": "tgw-rtb-0ac1075b2d9e739f9_10.1.0.0/22",
            "transit_gateway_attachment_id": "tgw-attach-09ada7b01e641c33f",
            "transit_gateway_route_table_id": "tgw-rtb-0ac1075b2d9e739f9"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.osi-tgw",
            "aws_ec2_transit_gateway_route_table.tgw-inspection-rt",
            "aws_ec2_transit_gateway_vpc_attachment.tgw-att-vpc-ins_vpc",
            "aws_subnet.tgw_subnet",
            "aws_vpc.ins_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "customer-default-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "0.0.0.0/0",
            "id": "tgw-rtb-09aac8a16d1bc9973_0.0.0.0/0",
            "transit_gateway_attachment_id": "tgw-attach-09ada7b01e641c33f",
            "transit_gateway_route_table_id": "tgw-rtb-09aac8a16d1bc9973"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.osi-tgw",
            "aws_ec2_transit_gateway_route_table.tgwy-vpc-route",
            "aws_ec2_transit_gateway_vpc_attachment.tgw-att-vpc-ins_vpc",
            "aws_subnet.tgw_subnet",
            "aws_vpc.ins_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "customerpublic-default-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "0.0.0.0/0",
            "id": "tgw-rtb-0d19eb4ae3a82c0ae_0.0.0.0/0",
            "transit_gateway_attachment_id": "tgw-attach-09ada7b01e641c33f",
            "transit_gateway_route_table_id": "tgw-rtb-0d19eb4ae3a82c0ae"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.osi-tgw",
            "aws_ec2_transit_gateway_route_table.tgwy-vpc2-route",
            "aws_ec2_transit_gateway_vpc_attachment.tgw-att-vpc-ins_vpc",
            "aws_subnet.tgw_subnet",
            "aws_vpc.ins_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table",
      "name": "tgw-inspection-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125564317:transit-gateway-route-table/tgw-rtb-0ac1075b2d9e739f9",
            "default_association_route_table": false,
            "default_propagation_route_table": false,
            "id": "tgw-rtb-0ac1075b2d9e739f9",
            "tags": {
              "Name": "TGW-Inspection-Att-RT"
            },
            "tags_all": {
              "Name": "TGW-Inspection-Att-RT"
            },
            "transit_gateway_id": "tgw-00314cdf2d3bcc3d0"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.osi-tgw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table",
      "name": "tgwy-vpc-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125564317:transit-gateway-route-table/tgw-rtb-09aac8a16d1bc9973",
            "default_association_route_table": false,
            "default_propagation_route_table": false,
            "id": "tgw-rtb-09aac8a16d1bc9973",
            "tags": {
              "Name": "TGW-Shared-Service-Att-RT"
            },
            "tags_all": {
              "Name": "TGW-Shared-Service-Att-RT"
            },
            "transit_gateway_id": "tgw-00314cdf2d3bcc3d0"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.osi-tgw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table",
      "name": "tgwy-vpc2-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125564317:transit-gateway-route-table/tgw-rtb-0d19eb4ae3a82c0ae",
            "default_association_route_table": false,
            "default_propagation_route_table": false,
            "id": "tgw-rtb-0d19eb4ae3a82c0ae",
            "tags": {
              "Name": "TGW-Workload-VPC-Att-RT"
            },
            "tags_all": {
              "Name": "TGW-Workload-VPC-Att-RT"
            },
            "transit_gateway_id": "tgw-00314cdf2d3bcc3d0"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.osi-tgw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_association",
      "name": "tgw-rt-vpc-customer-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-09aac8a16d1bc9973_tgw-attach-06e66b10462b13b2f",
            "replace_existing_association": false,
            "resource_id": "vpc-0725dde4fffd50a8a",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-06e66b10462b13b2f",
            "transit_gateway_route_table_id": "tgw-rtb-09aac8a16d1bc9973"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.osi-tgw",
            "aws_ec2_transit_gateway_route_table.tgwy-vpc-route",
            "aws_ec2_transit_gateway_vpc_attachment.tgw-att-vpc-vpc1",
            "aws_subnet.csprivatesubnetaz1",
            "aws_subnet.csprivatesubnetaz2",
            "aws_vpc.customer-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_association",
      "name": "tgw-rt-vpc-customerpublic-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-0d19eb4ae3a82c0ae_tgw-attach-0ffb7f72010e367f3",
            "replace_existing_association": false,
            "resource_id": "vpc-0b1ea9cd5edd377eb",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-0ffb7f72010e367f3",
            "transit_gateway_route_table_id": "tgw-rtb-0d19eb4ae3a82c0ae"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.osi-tgw",
            "aws_ec2_transit_gateway_route_table.tgwy-vpc2-route",
            "aws_ec2_transit_gateway_vpc_attachment.tgw-att-vpc-vpc2",
            "aws_subnet.pv-privatesubnetaz1",
            "aws_subnet.pv-privatesubnetaz2",
            "aws_vpc.public-customer-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_association",
      "name": "tgw-rt-vpc-ins-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-0ac1075b2d9e739f9_tgw-attach-09ada7b01e641c33f",
            "replace_existing_association": false,
            "resource_id": "vpc-0f922d696b1b8d18a",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-09ada7b01e641c33f",
            "transit_gateway_route_table_id": "tgw-rtb-0ac1075b2d9e739f9"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.osi-tgw",
            "aws_ec2_transit_gateway_route_table.tgw-inspection-rt",
            "aws_ec2_transit_gateway_vpc_attachment.tgw-att-vpc-ins_vpc",
            "aws_subnet.tgw_subnet",
            "aws_vpc.ins_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "tgw-att-vpc-ins_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "enable",
            "dns_support": "enable",
            "id": "tgw-attach-09ada7b01e641c33f",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-06223ba49ebd6e56d",
              "subnet-0acfc52038bd403c0"
            ],
            "tags": {
              "Name": "TGWY-Inspection-VPC-attachment"
            },
            "tags_all": {
              "Name": "TGWY-Inspection-VPC-attachment"
            },
            "transit_gateway_default_route_table_association": false,
            "transit_gateway_default_route_table_propagation": false,
            "transit_gateway_id": "tgw-00314cdf2d3bcc3d0",
            "vpc_id": "vpc-0f922d696b1b8d18a",
            "vpc_owner_id": "211125564317"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.osi-tgw",
            "aws_subnet.tgw_subnet",
            "aws_vpc.ins_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "tgw-att-vpc-vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-06e66b10462b13b2f",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-038f7a8bf6782d680",
              "subnet-08facebc39733aa76"
            ],
            "tags": {
              "Name": "TGWY-Shared-Service-VPC-Attachment"
            },
            "tags_all": {
              "Name": "TGWY-Shared-Service-VPC-Attachment"
            },
            "transit_gateway_default_route_table_association": false,
            "transit_gateway_default_route_table_propagation": false,
            "transit_gateway_id": "tgw-00314cdf2d3bcc3d0",
            "vpc_id": "vpc-0725dde4fffd50a8a",
            "vpc_owner_id": "211125564317"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.osi-tgw",
            "aws_subnet.csprivatesubnetaz1",
            "aws_subnet.csprivatesubnetaz2",
            "aws_vpc.customer-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "tgw-att-vpc-vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-0ffb7f72010e367f3",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-07970fdd7a2a04bc5",
              "subnet-0ed6844a7e5c6d248"
            ],
            "tags": {
              "Name": "TGWY-Workload-VPC-Attachment"
            },
            "tags_all": {
              "Name": "TGWY-Workload-VPC-Attachment"
            },
            "transit_gateway_default_route_table_association": false,
            "transit_gateway_default_route_table_propagation": false,
            "transit_gateway_id": "tgw-00314cdf2d3bcc3d0",
            "vpc_id": "vpc-0b1ea9cd5edd377eb",
            "vpc_owner_id": "211125564317"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.osi-tgw",
            "aws_subnet.pv-privatesubnetaz1",
            "aws_subnet.pv-privatesubnetaz2",
            "aws_vpc.public-customer-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "FGT2PublicIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08202160acf3f63e9",
            "association_id": "eipassoc-09af60da365061722",
            "domain": "vpc",
            "id": "eipalloc-08202160acf3f63e9",
            "instance": "i-072049bec1ade5d66",
            "network_border_group": "us-east-1",
            "network_interface": "eni-09c5aabe15fe4f51a",
            "private_dns": "ip-10-1-3-11.ec2.internal",
            "private_ip": "10.1.3.11",
            "public_dns": "ec2-23-20-136-242.compute-1.amazonaws.com",
            "public_ip": "23.20.136.242",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.fgtvm2",
            "aws_lb.gwlb",
            "aws_network_interface.fgt2eth0",
            "aws_network_interface.fgt2eth1",
            "aws_subnet.fw_data_subnet",
            "aws_subnet.fw_mgmt_subnet",
            "aws_subnet.gwlbe_subnet",
            "aws_vpc.ins_vpc",
            "aws_vpc_endpoint.gwlbe",
            "aws_vpc_endpoint_service.gwlb_es",
            "data.aws_network_interface.vpcendpointip",
            "data.aws_network_interface.vpcendpointipaz2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "FGTPublicIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f94aea4f66a1ea42",
            "association_id": "eipassoc-07f743767a782adfd",
            "domain": "vpc",
            "id": "eipalloc-0f94aea4f66a1ea42",
            "instance": "i-012a5546a370091af",
            "network_border_group": "us-east-1",
            "network_interface": "eni-05910eab45202e647",
            "private_dns": "ip-10-1-2-7.ec2.internal",
            "private_ip": "10.1.2.7",
            "public_dns": "ec2-44-223-225-214.compute-1.amazonaws.com",
            "public_ip": "44.223.225.214",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.fgtvm",
            "aws_lb.gwlb",
            "aws_network_interface.eth0",
            "aws_network_interface.fgt1eth1",
            "aws_subnet.fw_data_subnet",
            "aws_subnet.fw_mgmt_subnet",
            "aws_subnet.gwlbe_subnet",
            "aws_vpc.ins_vpc",
            "aws_vpc_endpoint.gwlbe",
            "aws_vpc_endpoint_service.gwlb_es",
            "data.aws_network_interface.vpcendpointip",
            "data.aws_network_interface.vpcendpointipaz2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07918c1f5d3bef2f1",
            "association_id": "eipassoc-0c159d27019fbb46b",
            "domain": "vpc",
            "id": "eipalloc-07918c1f5d3bef2f1",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0c65fc14df9d539f7",
            "private_dns": "ip-10-1-2-45.ec2.internal",
            "private_ip": "10.1.2.45",
            "public_dns": "ec2-3-222-118-88.compute-1.amazonaws.com",
            "public_ip": "3.222.118.88",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Inspection-VPC-NAT-GW-ip-us-east-1a"
            },
            "tags_all": {
              "Name": "Inspection-VPC-NAT-GW-ip-us-east-1a"
            },
            "vpc": true
          },
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c4e1841071aad776",
            "association_id": "eipassoc-08720cb0f3b276b0c",
            "domain": "vpc",
            "id": "eipalloc-0c4e1841071aad776",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0ee617c184e690456",
            "private_dns": "ip-10-1-3-41.ec2.internal",
            "private_ip": "10.1.3.41",
            "public_dns": "ec2-54-145-136-14.compute-1.amazonaws.com",
            "public_ip": "54.145.136.14",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Inspection-VPC-NAT-GW-ip-us-east-1b"
            },
            "tags_all": {
              "Name": "Inspection-VPC-NAT-GW-ip-us-east-1b"
            },
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "fgtvm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087ea152084f7cd92",
            "arn": "arn:aws:ec2:us-east-1:211125564317:instance/i-012a5546a370091af",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdb",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0fef6af5463149c62",
                "volume_size": 30,
                "volume_type": "standard"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-012a5546a370091af",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c6i.xlarge",
            "ipv6_address_count": 0,
            "key_name": "Test",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-05910eab45202e647"
              },
              {
                "delete_on_termination": false,
                "device_index": 1,
                "network_card_index": 0,
                "network_interface_id": "eni-01c3c4c45da3c30f0"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05910eab45202e647",
            "private_dns": "ip-10-1-2-7.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.2.7",
            "public_dns": "ec2-44-223-225-214.compute-1.amazonaws.com",
            "public_ip": "44.223.225.214",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0e63c5351f6c9511f",
                "volume_size": 2,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03ef595e5b1efcc36",
            "tags": {
              "Name": "FortiGateVM1"
            },
            "tags_all": {
              "Name": "FortiGateVM1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-062429e1f5330c709",
              "sg-078c16be698cfb03f"
            ]
          },
          "dependencies": [
            "aws_lb.gwlb",
            "aws_network_interface.eth0",
            "aws_network_interface.fgt1eth1",
            "aws_subnet.fw_data_subnet",
            "aws_subnet.fw_mgmt_subnet",
            "aws_subnet.gwlbe_subnet",
            "aws_vpc.ins_vpc",
            "aws_vpc_endpoint.gwlbe",
            "aws_vpc_endpoint_service.gwlb_es",
            "data.aws_network_interface.vpcendpointip",
            "data.aws_network_interface.vpcendpointipaz2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "fgtvm2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087ea152084f7cd92",
            "arn": "arn:aws:ec2:us-east-1:211125564317:instance/i-072049bec1ade5d66",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdb",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0cbc03bfd265b1cae",
                "volume_size": 30,
                "volume_type": "standard"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-072049bec1ade5d66",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c6i.xlarge",
            "ipv6_address_count": 0,
            "key_name": "Test",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-09c5aabe15fe4f51a"
              },
              {
                "delete_on_termination": false,
                "device_index": 1,
                "network_card_index": 0,
                "network_interface_id": "eni-049c24fdffb08b847"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09c5aabe15fe4f51a",
            "private_dns": "ip-10-1-3-11.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.3.11",
            "public_dns": "ec2-23-20-136-242.compute-1.amazonaws.com",
            "public_ip": "23.20.136.242",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0cdbcaebe369a6846",
                "volume_size": 2,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-027bc4739bd9ebe3b",
            "tags": {
              "Name": "FortiGateVM2"
            },
            "tags_all": {
              "Name": "FortiGateVM2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-062429e1f5330c709",
              "sg-078c16be698cfb03f"
            ]
          },
          "dependencies": [
            "aws_lb.gwlb",
            "aws_network_interface.fgt2eth0",
            "aws_network_interface.fgt2eth1",
            "aws_subnet.fw_data_subnet",
            "aws_subnet.fw_mgmt_subnet",
            "aws_subnet.gwlbe_subnet",
            "aws_vpc.ins_vpc",
            "aws_vpc_endpoint.gwlbe",
            "aws_vpc_endpoint_service.gwlb_es",
            "data.aws_network_interface.vpcendpointip",
            "data.aws_network_interface.vpcendpointipaz2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125564317:internet-gateway/igw-0d3e89742ab3585de",
            "id": "igw-0d3e89742ab3585de",
            "owner_id": "211125564317",
            "tags": {
              "Name": "Inspection-VPC-IGW"
            },
            "tags_all": {
              "Name": "Inspection-VPC-IGW"
            },
            "vpc_id": "vpc-0f922d696b1b8d18a"
          },
          "dependencies": [
            "aws_vpc.ins_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "pvigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125564317:internet-gateway/igw-056e83bf21fb1dd42",
            "id": "igw-056e83bf21fb1dd42",
            "owner_id": "211125564317",
            "tags": {
              "Name": "Workload-igw"
            },
            "tags_all": {
              "Name": "Workload-igw"
            },
            "vpc_id": "vpc-0b1ea9cd5edd377eb"
          },
          "dependencies": [
            "aws_vpc.public-customer-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "gwlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:211125564317:loadbalancer/gwy/gwlb-Inspection-VPC/4f22771f150eec84",
            "arn_suffix": "gwy/gwlb-Inspection-VPC/4f22771f150eec84",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:211125564317:loadbalancer/gwy/gwlb-Inspection-VPC/4f22771f150eec84",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "gateway",
            "name": "gwlb-Inspection-VPC",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05c6459e684ca46fe"
              },
              {
                "subnet_id": "subnet-060201d0d3e8537ab"
              }
            ],
            "subnets": [
              "subnet-05c6459e684ca46fe",
              "subnet-060201d0d3e8537ab"
            ],
            "vpc_id": "vpc-0f922d696b1b8d18a"
          },
          "dependencies": [
            "aws_subnet.fw_data_subnet",
            "aws_vpc.ins_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "gwlb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:211125564317:listener/gwy/gwlb-Inspection-VPC/4f22771f150eec84/bc4968ac0e51873b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 0,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:211125564317:targetgroup/gwlb-fw-targets/00fbb415aab5ad21d3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:211125564317:listener/gwy/gwlb-Inspection-VPC/4f22771f150eec84/bc4968ac0e51873b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:211125564317:loadbalancer/gwy/gwlb-Inspection-VPC/4f22771f150eec84",
            "port": 0,
            "protocol": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.gwlb",
            "aws_lb_target_group.gwlb_target",
            "aws_subnet.fw_data_subnet",
            "aws_vpc.ins_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "gwlb_target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:211125564317:targetgroup/gwlb-fw-targets/00fbb415aab5ad21d3",
            "arn_suffix": "targetgroup/gwlb-fw-targets/00fbb415aab5ad21d3",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "443",
                "protocol": "TCP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:211125564317:targetgroup/gwlb-fw-targets/00fbb415aab5ad21d3",
            "lambda_multi_value_headers_enabled": false,
            "name": "gwlb-fw-targets",
            "port": 6081,
            "protocol": "GENEVE",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip_dest_ip_proto"
              }
            ],
            "target_failover": [
              {
                "on_deregistration": "no_rebalance",
                "on_unhealthy": "no_rebalance"
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0f922d696b1b8d18a"
          },
          "dependencies": [
            "aws_vpc.ins_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "fgt2attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:211125564317:targetgroup/gwlb-fw-targets/00fbb415aab5ad21d3-2024061109380698390000000d",
            "port": 6081,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:211125564317:targetgroup/gwlb-fw-targets/00fbb415aab5ad21d3",
            "target_id": "10.1.1.107"
          },
          "dependencies": [
            "aws_instance.fgtvm2",
            "aws_lb.gwlb",
            "aws_lb_target_group.gwlb_target",
            "aws_network_interface.fgt2eth0",
            "aws_network_interface.fgt2eth1",
            "aws_subnet.fw_data_subnet",
            "aws_subnet.fw_mgmt_subnet",
            "aws_subnet.gwlbe_subnet",
            "aws_vpc.ins_vpc",
            "aws_vpc_endpoint.gwlbe",
            "aws_vpc_endpoint_service.gwlb_es",
            "data.aws_network_interface.vpcendpointip",
            "data.aws_network_interface.vpcendpointipaz2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "fgtattach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:211125564317:targetgroup/gwlb-fw-targets/00fbb415aab5ad21d3-2024061109380704220000000e",
            "port": 6081,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:211125564317:targetgroup/gwlb-fw-targets/00fbb415aab5ad21d3",
            "target_id": "10.1.0.91"
          },
          "dependencies": [
            "aws_instance.fgtvm",
            "aws_lb.gwlb",
            "aws_lb_target_group.gwlb_target",
            "aws_network_interface.eth0",
            "aws_network_interface.fgt1eth1",
            "aws_subnet.fw_data_subnet",
            "aws_subnet.fw_mgmt_subnet",
            "aws_subnet.gwlbe_subnet",
            "aws_vpc.ins_vpc",
            "aws_vpc_endpoint.gwlbe",
            "aws_vpc_endpoint_service.gwlb_es",
            "data.aws_network_interface.vpcendpointip",
            "data.aws_network_interface.vpcendpointipaz2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07918c1f5d3bef2f1",
            "association_id": "eipassoc-0c159d27019fbb46b",
            "connectivity_type": "public",
            "id": "nat-0ccc8bb535c5abdf2",
            "network_interface_id": "eni-0c65fc14df9d539f7",
            "private_ip": "10.1.2.45",
            "public_ip": "3.222.118.88",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0758df0b95e8cd286",
            "tags": {
              "Name": "Inspection-VPC-NAT-GW-us-east-1a"
            },
            "tags_all": {
              "Name": "Inspection-VPC-NAT-GW-us-east-1a"
            }
          },
          "dependencies": [
            "aws_eip.public_ip",
            "aws_subnet.natgw_subnet",
            "aws_vpc.ins_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c4e1841071aad776",
            "association_id": "eipassoc-08720cb0f3b276b0c",
            "connectivity_type": "public",
            "id": "nat-0392ddb89bc31807d",
            "network_interface_id": "eni-0ee617c184e690456",
            "private_ip": "10.1.3.41",
            "public_ip": "54.145.136.14",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0566b8bec0484f08d",
            "tags": {
              "Name": "Inspection-VPC-NAT-GW-us-east-1b"
            },
            "tags_all": {
              "Name": "Inspection-VPC-NAT-GW-us-east-1b"
            }
          },
          "dependencies": [
            "aws_eip.public_ip",
            "aws_subnet.natgw_subnet",
            "aws_vpc.ins_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "eth0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125564317:network-interface/eni-05910eab45202e647",
            "attachment": [
              {
                "attachment_id": "eni-attach-0283c0ce03d5dd2cf",
                "device_index": 0,
                "instance": "i-012a5546a370091af"
              }
            ],
            "description": "fgtvm-port1",
            "id": "eni-05910eab45202e647",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:ff:e1:7a:27:b5",
            "owner_id": "211125564317",
            "private_dns_name": "ip-10-1-2-7.ec2.internal",
            "private_ip": "10.1.2.7",
            "private_ip_list": [
              "10.1.2.7"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.1.2.7"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-062429e1f5330c709",
              "sg-078c16be698cfb03f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03ef595e5b1efcc36"
          },
          "dependencies": [
            "aws_subnet.fw_mgmt_subnet",
            "aws_vpc.ins_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "fgt1eth1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125564317:network-interface/eni-01c3c4c45da3c30f0",
            "attachment": [
              {
                "attachment_id": "eni-attach-0ffdb4760de385349",
                "device_index": 1,
                "instance": "i-012a5546a370091af"
              }
            ],
            "description": "fgtvm-port2",
            "id": "eni-01c3c4c45da3c30f0",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:ff:e0:10:bd:09",
            "owner_id": "211125564317",
            "private_dns_name": "ip-10-1-0-91.ec2.internal",
            "private_ip": "10.1.0.91",
            "private_ip_list": [
              "10.1.0.91"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.1.0.91"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-078c16be698cfb03f",
              "sg-0c21ac42c032fe76e"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-060201d0d3e8537ab"
          },
          "dependencies": [
            "aws_subnet.fw_data_subnet",
            "aws_vpc.ins_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "fgt2eth0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125564317:network-interface/eni-09c5aabe15fe4f51a",
            "attachment": [
              {
                "attachment_id": "eni-attach-092c0ea87020ba10a",
                "device_index": 0,
                "instance": "i-072049bec1ade5d66"
              }
            ],
            "description": "fgtvm2-port1",
            "id": "eni-09c5aabe15fe4f51a",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0e:8c:fe:ea:71:41",
            "owner_id": "211125564317",
            "private_dns_name": "ip-10-1-3-11.ec2.internal",
            "private_ip": "10.1.3.11",
            "private_ip_list": [
              "10.1.3.11"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.1.3.11"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-062429e1f5330c709",
              "sg-078c16be698cfb03f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-027bc4739bd9ebe3b"
          },
          "dependencies": [
            "aws_subnet.fw_mgmt_subnet",
            "aws_vpc.ins_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "fgt2eth1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125564317:network-interface/eni-049c24fdffb08b847",
            "attachment": [
              {
                "attachment_id": "eni-attach-04de65b2343c0081f",
                "device_index": 1,
                "instance": "i-072049bec1ade5d66"
              }
            ],
            "description": "fgtvm2-port2",
            "id": "eni-049c24fdffb08b847",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0e:51:f3:37:dc:8d",
            "owner_id": "211125564317",
            "private_dns_name": "ip-10-1-1-107.ec2.internal",
            "private_ip": "10.1.1.107",
            "private_ip_list": [
              "10.1.1.107"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.1.1.107"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-078c16be698cfb03f",
              "sg-0c21ac42c032fe76e"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-05c6459e684ca46fe"
          },
          "dependencies": [
            "aws_subnet.fw_data_subnet",
            "aws_vpc.ins_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "cs-tmp-firewallroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.0.0/22",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06cb50a8e030b7a88363821730",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06cb50a8e030b7a88",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-00314cdf2d3bcc3d0",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.osi-tgw",
            "aws_route_table.csprivatert",
            "aws_vpc.customer-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "csinternalroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06cb50a8e030b7a881080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06cb50a8e030b7a88",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-00314cdf2d3bcc3d0",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.osi-tgw",
            "aws_route_table.csprivatert",
            "aws_vpc.customer-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "pv-externalroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05646d263c47731721080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05646d263c4773172",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "vpce-0890ec4c8c4fbc529",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.gwlb",
            "aws_route_table.pv-publicrtaz1",
            "aws_subnet.fw_data_subnet",
            "aws_subnet.pv-gwlbe-az1",
            "aws_vpc.ins_vpc",
            "aws_vpc.public-customer-vpc",
            "aws_vpc_endpoint.gwlbendpoint",
            "aws_vpc_endpoint_service.gwlb_es"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "pv-externalrouteaz2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d7808959c5f15d841080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d7808959c5f15d84",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "vpce-09cafacd05daace39",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.gwlb",
            "aws_route_table.pv-publicrtaz2",
            "aws_subnet.fw_data_subnet",
            "aws_subnet.pv-gwlbe-az2",
            "aws_vpc.ins_vpc",
            "aws_vpc.public-customer-vpc",
            "aws_vpc_endpoint.gwlbendpointaz2",
            "aws_vpc_endpoint_service.gwlb_es"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "pv-gwlberouteaz1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-056e83bf21fb1dd42",
            "id": "r-rtb-011f601df9f7ee5111080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-011f601df9f7ee511",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.pvigw",
            "aws_route_table.pv-gwlbeaz1-rt",
            "aws_vpc.public-customer-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "pv-gwlberouteaz2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-056e83bf21fb1dd42",
            "id": "r-rtb-0a2263c56139041081080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a2263c5613904108",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.pvigw",
            "aws_route_table.pv-gwlbeaz2-rt",
            "aws_vpc.public-customer-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "pv-internalfirewallrouteaz1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.0.0/22",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05646d263c4773172363821730",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05646d263c4773172",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-00314cdf2d3bcc3d0",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.osi-tgw",
            "aws_route_table.pv-publicrtaz1",
            "aws_vpc.public-customer-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "pv-internalfirewallrouteaz2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.0.0/22",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d7808959c5f15d84363821730",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d7808959c5f15d84",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-00314cdf2d3bcc3d0",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.osi-tgw",
            "aws_route_table.pv-publicrtaz2",
            "aws_vpc.public-customer-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "pv-internalroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "20.1.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00447e0916cba0b231609725061",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00447e0916cba0b23",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-00314cdf2d3bcc3d0",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.osi-tgw",
            "aws_route_table.pv-privatert",
            "aws_vpc.public-customer-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "pv-internalrouteaz1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "20.1.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05646d263c47731721609725061",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05646d263c4773172",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-00314cdf2d3bcc3d0",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.osi-tgw",
            "aws_route_table.pv-publicrtaz1",
            "aws_vpc.public-customer-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "pv-internalrouteaz2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "20.1.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d7808959c5f15d841609725061",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d7808959c5f15d84",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-00314cdf2d3bcc3d0",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.osi-tgw",
            "aws_route_table.pv-publicrtaz2",
            "aws_vpc.public-customer-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "pv-publicrouteaz1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "20.2.0.0/24",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-030c57c18d06e9927341721481",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-030c57c18d06e9927",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "vpce-0890ec4c8c4fbc529",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.gwlb",
            "aws_route_table.pv-publicrt",
            "aws_subnet.fw_data_subnet",
            "aws_subnet.pv-gwlbe-az1",
            "aws_vpc.ins_vpc",
            "aws_vpc.public-customer-vpc",
            "aws_vpc_endpoint.gwlbendpoint",
            "aws_vpc_endpoint_service.gwlb_es"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "pv-publicrouteaz2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "20.2.2.0/24",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-030c57c18d06e99271503060098",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-030c57c18d06e9927",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "vpce-09cafacd05daace39",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.gwlb",
            "aws_route_table.pv-publicrt",
            "aws_subnet.fw_data_subnet",
            "aws_subnet.pv-gwlbe-az2",
            "aws_vpc.ins_vpc",
            "aws_vpc.public-customer-vpc",
            "aws_vpc_endpoint.gwlbendpointaz2",
            "aws_vpc_endpoint_service.gwlb_es"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "pv-tmp-externalroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00447e0916cba0b231080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00447e0916cba0b23",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-00314cdf2d3bcc3d0",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.osi-tgw",
            "aws_route_table.pv-privatert",
            "aws_vpc.public-customer-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "csprivatert",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125564317:route-table/rtb-06cb50a8e030b7a88",
            "id": "rtb-06cb50a8e030b7a88",
            "owner_id": "211125564317",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-00314cdf2d3bcc3d0",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.1.0.0/22",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-00314cdf2d3bcc3d0",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Share-Service-private-rt"
            },
            "tags_all": {
              "Name": "Share-Service-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0725dde4fffd50a8a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.customer-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "fw_data_rt_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125564317:route-table/rtb-035973658fa592d71",
            "id": "rtb-035973658fa592d71",
            "owner_id": "211125564317",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-01c3c4c45da3c30f0",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "20.0.0.0/8",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-00314cdf2d3bcc3d0",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Inspection-VPC-FW-DATA-rt-us-east-1a"
            },
            "tags_all": {
              "Name": "Inspection-VPC-FW-DATA-rt-us-east-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f922d696b1b8d18a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.osi-tgw",
            "aws_network_interface.fgt1eth1",
            "aws_subnet.fw_data_subnet",
            "aws_vpc.ins_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "fw_data_rt_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125564317:route-table/rtb-03bc417b9e756e6a9",
            "id": "rtb-03bc417b9e756e6a9",
            "owner_id": "211125564317",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-049c24fdffb08b847",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "20.0.0.0/8",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-00314cdf2d3bcc3d0",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Inspection-VPC-FW-DATA-rt-us-east-1b"
            },
            "tags_all": {
              "Name": "Inspection-VPC-FW-DATA-rt-us-east-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f922d696b1b8d18a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.osi-tgw",
            "aws_network_interface.fgt2eth1",
            "aws_subnet.fw_data_subnet",
            "aws_vpc.ins_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "fw_mgmt_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125564317:route-table/rtb-00799b78a549cce97",
            "id": "rtb-00799b78a549cce97",
            "owner_id": "211125564317",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d3e89742ab3585de",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "20.0.0.0/8",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-00314cdf2d3bcc3d0",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Inspection-VPC-FW-MGMT-rt-us-east-1a"
            },
            "tags_all": {
              "Name": "Inspection-VPC-FW-MGMT-rt-us-east-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f922d696b1b8d18a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.osi-tgw",
            "aws_internet_gateway.igw",
            "aws_vpc.ins_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125564317:route-table/rtb-081844375bdf7dd62",
            "id": "rtb-081844375bdf7dd62",
            "owner_id": "211125564317",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d3e89742ab3585de",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "20.0.0.0/8",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-00314cdf2d3bcc3d0",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Inspection-VPC-FW-MGMT-rt-us-east-1b"
            },
            "tags_all": {
              "Name": "Inspection-VPC-FW-MGMT-rt-us-east-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f922d696b1b8d18a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.osi-tgw",
            "aws_internet_gateway.igw",
            "aws_vpc.ins_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "gwlbe_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125564317:route-table/rtb-0b5d153f0b62383fa",
            "id": "rtb-0b5d153f0b62383fa",
            "owner_id": "211125564317",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ccc8bb535c5abdf2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "20.0.0.0/8",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-00314cdf2d3bcc3d0",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Inspection-VPC-GWLBe-rt-us-east-1a"
            },
            "tags_all": {
              "Name": "Inspection-VPC-GWLBe-rt-us-east-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f922d696b1b8d18a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.osi-tgw",
            "aws_eip.public_ip",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.natgw_subnet",
            "aws_vpc.ins_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125564317:route-table/rtb-07d013f9ebd55296f",
            "id": "rtb-07d013f9ebd55296f",
            "owner_id": "211125564317",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0392ddb89bc31807d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "20.0.0.0/8",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-00314cdf2d3bcc3d0",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Inspection-VPC-GWLBe-rt-us-east-1b"
            },
            "tags_all": {
              "Name": "Inspection-VPC-GWLBe-rt-us-east-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f922d696b1b8d18a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.osi-tgw",
            "aws_eip.public_ip",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.natgw_subnet",
            "aws_vpc.ins_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "natgw_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125564317:route-table/rtb-07acabc42bc4684dd",
            "id": "rtb-07acabc42bc4684dd",
            "owner_id": "211125564317",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d3e89742ab3585de",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "20.0.0.0/8",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "vpce-06abd8728fdf32461",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Inspection-VPC-NATGW-rt-us-east-1a"
            },
            "tags_all": {
              "Name": "Inspection-VPC-NATGW-rt-us-east-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f922d696b1b8d18a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_lb.gwlb",
            "aws_subnet.fw_data_subnet",
            "aws_subnet.gwlbe_subnet",
            "aws_vpc.ins_vpc",
            "aws_vpc_endpoint.gwlbe",
            "aws_vpc_endpoint_service.gwlb_es"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125564317:route-table/rtb-0c8b0951052d34e76",
            "id": "rtb-0c8b0951052d34e76",
            "owner_id": "211125564317",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d3e89742ab3585de",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "20.0.0.0/8",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "vpce-0d7c8a4a58ee4f144",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Inspection-VPC-NATGW-rt-us-east-1b"
            },
            "tags_all": {
              "Name": "Inspection-VPC-NATGW-rt-us-east-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f922d696b1b8d18a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_lb.gwlb",
            "aws_subnet.fw_data_subnet",
            "aws_subnet.gwlbe_subnet",
            "aws_vpc.ins_vpc",
            "aws_vpc_endpoint.gwlbe",
            "aws_vpc_endpoint_service.gwlb_es"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pv-gwlbeaz1-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125564317:route-table/rtb-011f601df9f7ee511",
            "id": "rtb-011f601df9f7ee511",
            "owner_id": "211125564317",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-056e83bf21fb1dd42",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Workload-gwlbeaz1-rt"
            },
            "tags_all": {
              "Name": "Workload-gwlbeaz1-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b1ea9cd5edd377eb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.public-customer-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pv-gwlbeaz2-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125564317:route-table/rtb-0a2263c5613904108",
            "id": "rtb-0a2263c5613904108",
            "owner_id": "211125564317",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-056e83bf21fb1dd42",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Workload-gwlbeaz2-rt"
            },
            "tags_all": {
              "Name": "Workload-gwlbeaz2-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b1ea9cd5edd377eb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.public-customer-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pv-privatert",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125564317:route-table/rtb-00447e0916cba0b23",
            "id": "rtb-00447e0916cba0b23",
            "owner_id": "211125564317",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-00314cdf2d3bcc3d0",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "20.1.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-00314cdf2d3bcc3d0",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Workload-private-rt"
            },
            "tags_all": {
              "Name": "Workload-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b1ea9cd5edd377eb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.public-customer-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pv-publicrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125564317:route-table/rtb-030c57c18d06e9927",
            "id": "rtb-030c57c18d06e9927",
            "owner_id": "211125564317",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "20.2.0.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "vpce-0890ec4c8c4fbc529",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "20.2.2.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "vpce-09cafacd05daace39",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Workload-public-IGW-rt"
            },
            "tags_all": {
              "Name": "Workload-public-IGW-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b1ea9cd5edd377eb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.public-customer-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pv-publicrtaz1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125564317:route-table/rtb-05646d263c4773172",
            "id": "rtb-05646d263c4773172",
            "owner_id": "211125564317",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "vpce-0890ec4c8c4fbc529",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.1.0.0/22",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-00314cdf2d3bcc3d0",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "20.1.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-00314cdf2d3bcc3d0",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Workload-publicaz1-egress-rt"
            },
            "tags_all": {
              "Name": "Workload-publicaz1-egress-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b1ea9cd5edd377eb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.public-customer-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pv-publicrtaz2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125564317:route-table/rtb-0d7808959c5f15d84",
            "id": "rtb-0d7808959c5f15d84",
            "owner_id": "211125564317",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "vpce-09cafacd05daace39",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.1.0.0/22",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-00314cdf2d3bcc3d0",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "20.1.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-00314cdf2d3bcc3d0",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Workload-publicaz2-egress-rt"
            },
            "tags_all": {
              "Name": "Workload-publicaz2-egress-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b1ea9cd5edd377eb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.public-customer-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tgwa_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125564317:route-table/rtb-049c4582a2c6763f0",
            "id": "rtb-049c4582a2c6763f0",
            "owner_id": "211125564317",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "vpce-06abd8728fdf32461",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Inspection-VPC-TGWe-rt-us-east-1a"
            },
            "tags_all": {
              "Name": "Inspection-VPC-TGWe-rt-us-east-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f922d696b1b8d18a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.gwlb",
            "aws_subnet.fw_data_subnet",
            "aws_subnet.gwlbe_subnet",
            "aws_vpc.ins_vpc",
            "aws_vpc_endpoint.gwlbe",
            "aws_vpc_endpoint_service.gwlb_es"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125564317:route-table/rtb-0ac75e83ddc4703bb",
            "id": "rtb-0ac75e83ddc4703bb",
            "owner_id": "211125564317",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "vpce-0d7c8a4a58ee4f144",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Inspection-VPC-TGWe-rt-us-east-1b"
            },
            "tags_all": {
              "Name": "Inspection-VPC-TGWe-rt-us-east-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f922d696b1b8d18a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.gwlb",
            "aws_subnet.fw_data_subnet",
            "aws_subnet.gwlbe_subnet",
            "aws_vpc.ins_vpc",
            "aws_vpc_endpoint.gwlbe",
            "aws_vpc_endpoint_service.gwlb_es"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "csinternalassociateaz1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0102f79d0173062a6",
            "route_table_id": "rtb-06cb50a8e030b7a88",
            "subnet_id": "subnet-038f7a8bf6782d680"
          },
          "dependencies": [
            "aws_route_table.csprivatert",
            "aws_subnet.csprivatesubnetaz1",
            "aws_vpc.customer-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "csinternalassociateaz2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab3d6189f29cb4ab",
            "route_table_id": "rtb-06cb50a8e030b7a88",
            "subnet_id": "subnet-08facebc39733aa76"
          },
          "dependencies": [
            "aws_route_table.csprivatert",
            "aws_subnet.csprivatesubnetaz2",
            "aws_vpc.customer-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "fw_data_rt_1a_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08a58bf9c1807aea3",
            "route_table_id": "rtb-035973658fa592d71",
            "subnet_id": "subnet-060201d0d3e8537ab"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.osi-tgw",
            "aws_network_interface.fgt1eth1",
            "aws_route_table.fw_data_rt_1a",
            "aws_subnet.fw_data_subnet",
            "aws_vpc.ins_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08a58bf9c1807aea3",
            "route_table_id": "rtb-035973658fa592d71",
            "subnet_id": "subnet-060201d0d3e8537ab"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.osi-tgw",
            "aws_network_interface.fgt1eth1",
            "aws_route_table.fw_data_rt_1a",
            "aws_subnet.fw_data_subnet",
            "aws_vpc.ins_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "fw_data_rt_1b_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c4e496e07c8ff20",
            "route_table_id": "rtb-03bc417b9e756e6a9",
            "subnet_id": "subnet-05c6459e684ca46fe"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.osi-tgw",
            "aws_network_interface.fgt2eth1",
            "aws_route_table.fw_data_rt_1b",
            "aws_subnet.fw_data_subnet",
            "aws_vpc.ins_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c4e496e07c8ff20",
            "route_table_id": "rtb-03bc417b9e756e6a9",
            "subnet_id": "subnet-05c6459e684ca46fe"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.osi-tgw",
            "aws_network_interface.fgt2eth1",
            "aws_route_table.fw_data_rt_1b",
            "aws_subnet.fw_data_subnet",
            "aws_vpc.ins_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "fw_mgmt_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08bc0a21f5e19db58",
            "route_table_id": "rtb-00799b78a549cce97",
            "subnet_id": "subnet-03ef595e5b1efcc36"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.osi-tgw",
            "aws_internet_gateway.igw",
            "aws_route_table.fw_mgmt_rt",
            "aws_subnet.fw_mgmt_subnet",
            "aws_vpc.ins_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dee88119d9479739",
            "route_table_id": "rtb-081844375bdf7dd62",
            "subnet_id": "subnet-027bc4739bd9ebe3b"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.osi-tgw",
            "aws_internet_gateway.igw",
            "aws_route_table.fw_mgmt_rt",
            "aws_subnet.fw_mgmt_subnet",
            "aws_vpc.ins_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "gwlbe_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0348642c84b8eecda",
            "route_table_id": "rtb-0b5d153f0b62383fa",
            "subnet_id": "subnet-0545ecbdc621c0c0a"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.osi-tgw",
            "aws_eip.public_ip",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.gwlbe_rt",
            "aws_subnet.gwlbe_subnet",
            "aws_subnet.natgw_subnet",
            "aws_vpc.ins_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c04bd9022d6dd08e",
            "route_table_id": "rtb-07d013f9ebd55296f",
            "subnet_id": "subnet-073fca1e53c58375d"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.osi-tgw",
            "aws_eip.public_ip",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.gwlbe_rt",
            "aws_subnet.gwlbe_subnet",
            "aws_subnet.natgw_subnet",
            "aws_vpc.ins_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "natgw_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-018c841eb54d31023",
            "route_table_id": "rtb-07acabc42bc4684dd",
            "subnet_id": "subnet-0758df0b95e8cd286"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_lb.gwlb",
            "aws_route_table.natgw_rt",
            "aws_subnet.fw_data_subnet",
            "aws_subnet.gwlbe_subnet",
            "aws_subnet.natgw_subnet",
            "aws_vpc.ins_vpc",
            "aws_vpc_endpoint.gwlbe",
            "aws_vpc_endpoint_service.gwlb_es"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e39ded7cc16ecc51",
            "route_table_id": "rtb-0c8b0951052d34e76",
            "subnet_id": "subnet-0566b8bec0484f08d"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_lb.gwlb",
            "aws_route_table.natgw_rt",
            "aws_subnet.fw_data_subnet",
            "aws_subnet.gwlbe_subnet",
            "aws_subnet.natgw_subnet",
            "aws_vpc.ins_vpc",
            "aws_vpc_endpoint.gwlbe",
            "aws_vpc_endpoint_service.gwlb_es"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pvgwlbeassociateaz1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07d37315710cbc73e",
            "route_table_id": "rtb-011f601df9f7ee511",
            "subnet_id": "subnet-02f0403e520000748"
          },
          "dependencies": [
            "aws_route_table.pv-gwlbeaz1-rt",
            "aws_subnet.pv-gwlbe-az1",
            "aws_vpc.public-customer-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pvgwlbeassociateaz2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4da1e4b4a8a0351",
            "route_table_id": "rtb-0a2263c5613904108",
            "subnet_id": "subnet-03c64abbd357876e0"
          },
          "dependencies": [
            "aws_route_table.pv-gwlbeaz2-rt",
            "aws_subnet.pv-gwlbe-az2",
            "aws_vpc.public-customer-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pvinternalassociateaz1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c3c4b9efb8ec983",
            "route_table_id": "rtb-00447e0916cba0b23",
            "subnet_id": "subnet-0ed6844a7e5c6d248"
          },
          "dependencies": [
            "aws_route_table.pv-privatert",
            "aws_subnet.pv-privatesubnetaz1",
            "aws_vpc.public-customer-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pvinternalassociateaz2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ec56a0f1be29d50",
            "route_table_id": "rtb-00447e0916cba0b23",
            "subnet_id": "subnet-07970fdd7a2a04bc5"
          },
          "dependencies": [
            "aws_route_table.pv-privatert",
            "aws_subnet.pv-privatesubnetaz2",
            "aws_vpc.public-customer-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pvpubassociateaz1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eab07f7dc3911ea2",
            "route_table_id": "rtb-05646d263c4773172",
            "subnet_id": "subnet-07c13bcf94eb73501"
          },
          "dependencies": [
            "aws_route_table.pv-publicrtaz1",
            "aws_subnet.pv-publicsubnetaz1",
            "aws_vpc.public-customer-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pvpubassociateaz2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4e53ba9bdc17b49",
            "route_table_id": "rtb-0d7808959c5f15d84",
            "subnet_id": "subnet-05845dd4e99e24c08"
          },
          "dependencies": [
            "aws_route_table.pv-publicrtaz2",
            "aws_subnet.pv-publicsubnetaz2",
            "aws_vpc.public-customer-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pvpublicassociate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "gateway_id": "igw-056e83bf21fb1dd42",
            "id": "rtbassoc-045dc2bae4ea23afa",
            "route_table_id": "rtb-030c57c18d06e9927"
          },
          "dependencies": [
            "aws_internet_gateway.pvigw",
            "aws_route_table.pv-publicrt",
            "aws_vpc.public-customer-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tgwa_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a5098d89a5646ec0",
            "route_table_id": "rtb-049c4582a2c6763f0",
            "subnet_id": "subnet-06223ba49ebd6e56d"
          },
          "dependencies": [
            "aws_lb.gwlb",
            "aws_route_table.tgwa_rt",
            "aws_subnet.fw_data_subnet",
            "aws_subnet.gwlbe_subnet",
            "aws_subnet.tgw_subnet",
            "aws_vpc.ins_vpc",
            "aws_vpc_endpoint.gwlbe",
            "aws_vpc_endpoint_service.gwlb_es"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096fd0e1a511b80d3",
            "route_table_id": "rtb-0ac75e83ddc4703bb",
            "subnet_id": "subnet-0acfc52038bd403c0"
          },
          "dependencies": [
            "aws_lb.gwlb",
            "aws_route_table.tgwa_rt",
            "aws_subnet.fw_data_subnet",
            "aws_subnet.gwlbe_subnet",
            "aws_subnet.tgw_subnet",
            "aws_vpc.ins_vpc",
            "aws_vpc_endpoint.gwlbe",
            "aws_vpc_endpoint_service.gwlb_es"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fw-data-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125564317:security-group/sg-0c21ac42c032fe76e",
            "description": "Controls traffic to Fortigate Firewall Data ENI",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c21ac42c032fe76e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.1.0.0/24",
                  "10.1.1.0/24"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.1.0.0/24",
                  "10.1.1.0/24"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.1.0.0/24",
                  "10.1.1.0/24"
                ],
                "description": "",
                "from_port": 6081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 6081
              }
            ],
            "name": "Inspection-VPC-fw-data-sg",
            "name_prefix": "",
            "owner_id": "211125564317",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Inspection-VPC-fw-data-sg"
            },
            "tags_all": {
              "Name": "Inspection-VPC-fw-data-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f922d696b1b8d18a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ins_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fw-mgmt-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125564317:security-group/sg-062429e1f5330c709",
            "description": "Controls traffic to Fortigate Firewall MGMT ENI",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-062429e1f5330c709",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Inspection-VPC-fw-mgmt-sg",
            "name_prefix": "",
            "owner_id": "211125564317",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Inspection-VPC-fw-mgmt-sg"
            },
            "tags_all": {
              "Name": "Inspection-VPC-fw-mgmt-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f922d696b1b8d18a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ins_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "csprivatesubnetaz1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125564317:subnet/subnet-038f7a8bf6782d680",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "20.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-038f7a8bf6782d680",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125564317",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Share-Service private subnet az1"
            },
            "tags_all": {
              "Name": "Share-Service private subnet az1"
            },
            "vpc_id": "vpc-0725dde4fffd50a8a"
          },
          "dependencies": [
            "aws_vpc.customer-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "csprivatesubnetaz2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125564317:subnet/subnet-08facebc39733aa76",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "20.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08facebc39733aa76",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125564317",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Share-Service private subnet az2"
            },
            "tags_all": {
              "Name": "Share-Service private subnet az2"
            },
            "vpc_id": "vpc-0725dde4fffd50a8a"
          },
          "dependencies": [
            "aws_vpc.customer-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "fw_data_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125564317:subnet/subnet-060201d0d3e8537ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-060201d0d3e8537ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125564317",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Inspection-VPC-fw-data-us-east-1a-private-sn",
              "Tier": "private"
            },
            "tags_all": {
              "Name": "Inspection-VPC-fw-data-us-east-1a-private-sn",
              "Tier": "private"
            },
            "vpc_id": "vpc-0f922d696b1b8d18a"
          },
          "dependencies": [
            "aws_vpc.ins_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125564317:subnet/subnet-05c6459e684ca46fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05c6459e684ca46fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125564317",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Inspection-VPC-fw-data-us-east-1b-private-sn",
              "Tier": "private"
            },
            "tags_all": {
              "Name": "Inspection-VPC-fw-data-us-east-1b-private-sn",
              "Tier": "private"
            },
            "vpc_id": "vpc-0f922d696b1b8d18a"
          },
          "dependencies": [
            "aws_vpc.ins_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "fw_mgmt_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125564317:subnet/subnet-03ef595e5b1efcc36",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.2.0/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ef595e5b1efcc36",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125564317",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Inspection-VPC-fw-mgmt-us-east-1a-private-sn",
              "Tier": "private"
            },
            "tags_all": {
              "Name": "Inspection-VPC-fw-mgmt-us-east-1a-private-sn",
              "Tier": "private"
            },
            "vpc_id": "vpc-0f922d696b1b8d18a"
          },
          "dependencies": [
            "aws_vpc.ins_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125564317:subnet/subnet-027bc4739bd9ebe3b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.3.0/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-027bc4739bd9ebe3b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125564317",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Inspection-VPC-fw-mgmt-us-east-1b-private-sn",
              "Tier": "private"
            },
            "tags_all": {
              "Name": "Inspection-VPC-fw-mgmt-us-east-1b-private-sn",
              "Tier": "private"
            },
            "vpc_id": "vpc-0f922d696b1b8d18a"
          },
          "dependencies": [
            "aws_vpc.ins_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "gwlbe_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125564317:subnet/subnet-0545ecbdc621c0c0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.2.48/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0545ecbdc621c0c0a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125564317",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Inspection-VPC-gwlbe-us-east-1a-private-sn",
              "Tier": "private"
            },
            "tags_all": {
              "Name": "Inspection-VPC-gwlbe-us-east-1a-private-sn",
              "Tier": "private"
            },
            "vpc_id": "vpc-0f922d696b1b8d18a"
          },
          "dependencies": [
            "aws_vpc.ins_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125564317:subnet/subnet-073fca1e53c58375d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.3.48/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-073fca1e53c58375d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125564317",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Inspection-VPC-gwlbe-us-east-1b-private-sn",
              "Tier": "private"
            },
            "tags_all": {
              "Name": "Inspection-VPC-gwlbe-us-east-1b-private-sn",
              "Tier": "private"
            },
            "vpc_id": "vpc-0f922d696b1b8d18a"
          },
          "dependencies": [
            "aws_vpc.ins_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "natgw_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125564317:subnet/subnet-0758df0b95e8cd286",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.2.32/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0758df0b95e8cd286",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125564317",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Inspection-VPC-natgw-us-east-1a-public-sn",
              "Tier": "public"
            },
            "tags_all": {
              "Name": "Inspection-VPC-natgw-us-east-1a-public-sn",
              "Tier": "public"
            },
            "vpc_id": "vpc-0f922d696b1b8d18a"
          },
          "dependencies": [
            "aws_vpc.ins_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125564317:subnet/subnet-0566b8bec0484f08d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.3.32/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0566b8bec0484f08d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125564317",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Inspection-VPC-natgw-us-east-1b-public-sn",
              "Tier": "public"
            },
            "tags_all": {
              "Name": "Inspection-VPC-natgw-us-east-1b-public-sn",
              "Tier": "public"
            },
            "vpc_id": "vpc-0f922d696b1b8d18a"
          },
          "dependencies": [
            "aws_vpc.ins_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pv-gwlbe-az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125564317:subnet/subnet-02f0403e520000748",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "20.2.128.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02f0403e520000748",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125564317",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Workload gwlbe subnet az1"
            },
            "tags_all": {
              "Name": "Workload gwlbe subnet az1"
            },
            "vpc_id": "vpc-0b1ea9cd5edd377eb"
          },
          "dependencies": [
            "aws_vpc.public-customer-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pv-gwlbe-az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125564317:subnet/subnet-03c64abbd357876e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "20.2.128.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03c64abbd357876e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125564317",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Workload gwlbe subnet az2"
            },
            "tags_all": {
              "Name": "Workload gwlbe subnet az2"
            },
            "vpc_id": "vpc-0b1ea9cd5edd377eb"
          },
          "dependencies": [
            "aws_vpc.public-customer-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pv-privatesubnetaz1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125564317:subnet/subnet-0ed6844a7e5c6d248",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "20.2.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ed6844a7e5c6d248",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125564317",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Workload private subnet az1"
            },
            "tags_all": {
              "Name": "Workload private subnet az1"
            },
            "vpc_id": "vpc-0b1ea9cd5edd377eb"
          },
          "dependencies": [
            "aws_vpc.public-customer-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pv-privatesubnetaz2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125564317:subnet/subnet-07970fdd7a2a04bc5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "20.2.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07970fdd7a2a04bc5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125564317",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Workload private subnet az2"
            },
            "tags_all": {
              "Name": "Workload private subnet az2"
            },
            "vpc_id": "vpc-0b1ea9cd5edd377eb"
          },
          "dependencies": [
            "aws_vpc.public-customer-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pv-publicsubnetaz1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125564317:subnet/subnet-07c13bcf94eb73501",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "20.2.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07c13bcf94eb73501",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125564317",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Workload public subnet az1"
            },
            "tags_all": {
              "Name": "Workload public subnet az1"
            },
            "vpc_id": "vpc-0b1ea9cd5edd377eb"
          },
          "dependencies": [
            "aws_vpc.public-customer-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pv-publicsubnetaz2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125564317:subnet/subnet-05845dd4e99e24c08",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "20.2.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05845dd4e99e24c08",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125564317",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Workload public subnet az2"
            },
            "tags_all": {
              "Name": "Workload public subnet az2"
            },
            "vpc_id": "vpc-0b1ea9cd5edd377eb"
          },
          "dependencies": [
            "aws_vpc.public-customer-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tgw_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125564317:subnet/subnet-06223ba49ebd6e56d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.2.64/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06223ba49ebd6e56d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125564317",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Inspection-VPC-tgw-us-east-1a-private-sn",
              "Tier": "private"
            },
            "tags_all": {
              "Name": "Inspection-VPC-tgw-us-east-1a-private-sn",
              "Tier": "private"
            },
            "vpc_id": "vpc-0f922d696b1b8d18a"
          },
          "dependencies": [
            "aws_vpc.ins_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125564317:subnet/subnet-0acfc52038bd403c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.3.64/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0acfc52038bd403c0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125564317",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Inspection-VPC-tgw-us-east-1b-private-sn",
              "Tier": "private"
            },
            "tags_all": {
              "Name": "Inspection-VPC-tgw-us-east-1b-private-sn",
              "Tier": "private"
            },
            "vpc_id": "vpc-0f922d696b1b8d18a"
          },
          "dependencies": [
            "aws_vpc.ins_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "customer-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125564317:vpc/vpc-0725dde4fffd50a8a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "20.1.0.0/16",
            "default_network_acl_id": "acl-02d7a8f724dddf13d",
            "default_route_table_id": "rtb-06b542e5a67dd6f9a",
            "default_security_group_id": "sg-03d098ab87a2cb5f2",
            "dhcp_options_id": "dopt-0b62678d6e0eb8717",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0725dde4fffd50a8a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06b542e5a67dd6f9a",
            "owner_id": "211125564317",
            "tags": {
              "Name": "Shared-Service-VPC"
            },
            "tags_all": {
              "Name": "Shared-Service-VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ins_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125564317:vpc/vpc-0f922d696b1b8d18a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/22",
            "default_network_acl_id": "acl-00054d8053d753684",
            "default_route_table_id": "rtb-0246ce14660095ced",
            "default_security_group_id": "sg-078c16be698cfb03f",
            "dhcp_options_id": "dopt-0b62678d6e0eb8717",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f922d696b1b8d18a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0246ce14660095ced",
            "owner_id": "211125564317",
            "tags": {
              "Name": "Inspection-VPC"
            },
            "tags_all": {
              "Name": "Inspection-VPC"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "public-customer-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125564317:vpc/vpc-0b1ea9cd5edd377eb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "20.2.0.0/16",
            "default_network_acl_id": "acl-06226ecccb5b05c35",
            "default_route_table_id": "rtb-0d3366b8fc5cdb9f3",
            "default_security_group_id": "sg-067adc658b9ec5f42",
            "dhcp_options_id": "dopt-0b62678d6e0eb8717",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b1ea9cd5edd377eb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d3366b8fc5cdb9f3",
            "owner_id": "211125564317",
            "tags": {
              "Name": "Workload-VPC"
            },
            "tags_all": {
              "Name": "Workload-VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "gwlbe",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125564317:vpc-endpoint/vpce-06abd8728fdf32461",
            "id": "vpce-06abd8728fdf32461",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-03230bf1a04fd764f"
            ],
            "owner_id": "211125564317",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.vpce.us-east-1.vpce-svc-0d999cb062a6acacf",
            "state": "available",
            "subnet_ids": [
              "subnet-0545ecbdc621c0c0a"
            ],
            "tags": {
              "Name": "gwlbe-Inspection-VPC-us-east-1a"
            },
            "tags_all": {
              "Name": "gwlbe-Inspection-VPC-us-east-1a"
            },
            "vpc_endpoint_type": "GatewayLoadBalancer",
            "vpc_id": "vpc-0f922d696b1b8d18a"
          },
          "dependencies": [
            "aws_lb.gwlb",
            "aws_subnet.fw_data_subnet",
            "aws_subnet.gwlbe_subnet",
            "aws_vpc.ins_vpc",
            "aws_vpc_endpoint_service.gwlb_es"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125564317:vpc-endpoint/vpce-0d7c8a4a58ee4f144",
            "id": "vpce-0d7c8a4a58ee4f144",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-08639da432e03c496"
            ],
            "owner_id": "211125564317",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.vpce.us-east-1.vpce-svc-0d999cb062a6acacf",
            "state": "available",
            "subnet_ids": [
              "subnet-073fca1e53c58375d"
            ],
            "tags": {
              "Name": "gwlbe-Inspection-VPC-us-east-1b"
            },
            "tags_all": {
              "Name": "gwlbe-Inspection-VPC-us-east-1b"
            },
            "vpc_endpoint_type": "GatewayLoadBalancer",
            "vpc_id": "vpc-0f922d696b1b8d18a"
          },
          "dependencies": [
            "aws_lb.gwlb",
            "aws_subnet.fw_data_subnet",
            "aws_subnet.gwlbe_subnet",
            "aws_vpc.ins_vpc",
            "aws_vpc_endpoint_service.gwlb_es"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "gwlbendpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125564317:vpc-endpoint/vpce-0890ec4c8c4fbc529",
            "id": "vpce-0890ec4c8c4fbc529",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0844d5ccafddf26f9"
            ],
            "owner_id": "211125564317",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.vpce.us-east-1.vpce-svc-0d999cb062a6acacf",
            "state": "available",
            "subnet_ids": [
              "subnet-02f0403e520000748"
            ],
            "vpc_endpoint_type": "GatewayLoadBalancer",
            "vpc_id": "vpc-0b1ea9cd5edd377eb"
          },
          "dependencies": [
            "aws_lb.gwlb",
            "aws_subnet.fw_data_subnet",
            "aws_subnet.pv-gwlbe-az1",
            "aws_vpc.ins_vpc",
            "aws_vpc.public-customer-vpc",
            "aws_vpc_endpoint_service.gwlb_es"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "gwlbendpointaz2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125564317:vpc-endpoint/vpce-09cafacd05daace39",
            "id": "vpce-09cafacd05daace39",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0341234032f923700"
            ],
            "owner_id": "211125564317",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.vpce.us-east-1.vpce-svc-0d999cb062a6acacf",
            "state": "available",
            "subnet_ids": [
              "subnet-03c64abbd357876e0"
            ],
            "vpc_endpoint_type": "GatewayLoadBalancer",
            "vpc_id": "vpc-0b1ea9cd5edd377eb"
          },
          "dependencies": [
            "aws_lb.gwlb",
            "aws_subnet.fw_data_subnet",
            "aws_subnet.pv-gwlbe-az2",
            "aws_vpc.ins_vpc",
            "aws_vpc.public-customer-vpc",
            "aws_vpc_endpoint_service.gwlb_es"
          ]
        }
      ]
    }
  ]
}